--- a/generators/simple.hbs
+++ b/generators/simple.hbs
@@ -1,1 +1,1 @@
-namespace {{#each namespace.components}}{{#if @index}}::{{/if}}{{this}}{{/each}};
+namespace {{#each module.namespace.components}}{{#if @index}}::{{/if}}{{this}}{{/each}};
